<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:weightSum="5">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingEnd="@dimen/margin_medium_1"
        android:layout_weight="1">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivAmentities"
            android:layout_width="@dimen/margin_xxlarge"
            android:layout_height="@dimen/margin_xxlarge"
            android:layout_centerHorizontal="true"
            android:src="@drawable/theme" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/option_amentities"
            style="@style/text_regular"
            android:layout_below="@id/ivAmentities"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingEnd="@dimen/margin_medium_1"
        android:layout_weight="1">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivFacilities"
            android:layout_width="@dimen/margin_xxlarge"
            android:layout_height="@dimen/margin_xxlarge"
            android:src="@drawable/workout"
            android:layout_centerHorizontal="true"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/option_facilities"
            style="@style/text_regular"
            android:layout_below="@id/ivFacilities"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingEnd="@dimen/margin_medium_1"
        android:layout_weight="1">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivFnB"
            android:layout_width="@dimen/margin_xxlarge"
            android:layout_height="@dimen/margin_xxlarge"
            android:layout_centerHorizontal="true"
            android:src="@drawable/fnb" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/text_regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ivFnB"
            android:layout_centerHorizontal="true"
            android:text="@string/option_fnb" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingEnd="@dimen/margin_medium_1"
        android:layout_weight="1">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivKidsFamily"
            android:layout_width="@dimen/margin_xxlarge"
            android:layout_height="@dimen/margin_xxlarge"
            android:src="@drawable/kidsfamily"
            android:layout_centerHorizontal="true"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/option_kidsfamily"
            style="@style/text_regular"
            android:layout_below="@id/ivKidsFamily"
            android:layout_centerHorizontal="true"/>/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingEnd="@dimen/margin_medium_1"
        android:layout_weight="1">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivWellness"
            android:layout_width="@dimen/margin_xxlarge"
            android:layout_height="@dimen/margin_xxlarge"
            android:src="@drawable/wellness"
            android:layout_centerHorizontal="true"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/option_wellness"
            style="@style/text_regular"
            android:layout_below="@id/ivWellness"
            android:layout_centerHorizontal="true"/>/>
    </RelativeLayout>

</androidx.appcompat.widget.LinearLayoutCompat>